--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -5,15 +5,15 @@
 @charset "utf-8";
 
 // HLB brand colors
-$primary: #6031b6;
-$secondary: #4372d6;
+$primary: #f9a534;
+$secondary: #ee4776;
 $secondary-hover: lighten($secondary, 10%);
 
 $media-color-one: #49759a;
-$media-color-two: #744d9f;
-$media-color-three: #00838f;
-$media-color-four: #00838f;
-$media-color-five: #00838f;
+$media-color-two: #e79529;
+$media-color-three: #9e65a8;
+$media-color-four: #9e65a8;
+$media-color-five: #9e65a8;
 
 $gap: 32px !default;
 $desktop: 960px + (2 * $gap) !default;
